
* SOLR-16590: Standardize Builder method names on SolrClient's to use the with pattern, deprecating the use of set or bare property name.  (Eric Pugh)

* SOLR-16595: Standardize Builder methods handling of times to use require a TimeUnit to be passed in.  Deprecated methods that
  do not specify a TimeUnit.  (Eric Pugh)

Optimizations
---------------------

* SOLR-16515: Remove synchronized access to cachedOrdMaps in SlowCompositeReaderWrapper (Dennis Berger, Torsten Bøgh Köster, Marco Petris)

* SOLR-16555: SolrIndexSearcher - FilterCache intersections/andNot should not clone bitsets repeatedly (Kevin Risden, David Smiley)

* SOLR-15732: queries to missing collection are slow (noble)

* SOLR-15616: Allow thread metrics to be cached (Ishan Chattopadhyaya, ab)

* SOLR-16615: Jersey 'ApplicationHandlers' are now shared by compatible cores where possible (Jason Gerlowski, Houston Putman)

Bug Fixes
---------------------

* SOLR-16436: Fix "false positive" suggestions from DirectSolrSpellChecker when using maxQueryFrequency > 1 in
  multi-shard collections (hossman)

* SOLR-15854: Upgrade semver library to fix versioning constraint bugs in the PackageManager. (Houston Putman, Kevin Risden)

* SOLR-16160: UpdateXmlMessages duplicate data when data is removed and then added in the same message (Alex Deparvu via Kevin Risden)

* SOLR-16483: Fix IndexOutOfBounds in RecursiveNumericEvaluator (Bendegúz Ács via Kevin Risden)

* SOLR-16363: DirectUpdateHandler2 should not throw UnknownFormatConversionException (Kevin Risden)

* SOLR-16293: Luke request fails for document with a binary field (Kevin Risden)

* SOLR-16477: Collection RENAME api creates broken alias (Alex Deparvu via Kevin Risden)

* SOLR-10918: Fix IntPointField hashing for HLL (Houston Putman)

* SOLR-16274: HEAD request for managed resource returns 500 Server Error (Kevin Risden)

* SOLR-16528: Jaegertracer module must include okhttp3 dependency (janhoy)
