@@ -143,6 +143,9 @@ Improvements
 * SOLR-16595: Standardize Builder methods handling of times to use require a TimeUnit to be passed in.  Deprecated methods that
   do not specify a TimeUnit.  (Eric Pugh)
 
+* SOLR-11029: A v2 equivalent of the `/admin/collections?action=DELETENODE` command is now available at
+  `POST /api/cluster/nodes/nodeName/clear`. (Bence Szabo via Jason Gerlowski)
+
 Optimizations
 ---------------------
 
